ai architecture refactor